--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
                    <li><a href="#testimonials">Testimonial</a></li>
                    <li><a href="#contact">Contact</a></li>
                  </ul>
-                 <h1 class="logo">ABC<sub>afe</sub>
-                 </h1>
-          
-                 
+                 <h1 class="logo">Wcafe </h1>
             </div>
         </nav>
            <section class="showcase-area" id="showcase">
